Add annimated gif to national championship post.

--- a/content/english/blog/20240113.md
+++ b/content/english/blog/20240113.md
@@ -29,6 +29,9 @@ There was lots of encouragement for the riders and I could hear my name being ca
 
 As I cross the line for the first lap I was 45 seconds up on second place.  It's a gap that can quickly disappear so I knew I had to stay focused.  I was also making my way through the u16 field.  First lap completed I now knew that (1) I had a gap, (2) the field had thinned out so passing would be easier and (3) the race distance would be 3 laps.
 
+{{< image class="img-fluid img-center rounded-6" title="image" src="/images/blog/20240113-1.gif" alt="element">}}
+*Image Credit: [VergeSport Cyclocross](https://www.facebook.com/profile.php?id=100086322904995)*
+
 Second lap I focused on consistency.  Keep doing the things that work.  The weather was cold and dry which meant the u16/u14 girls are not going to cut up the course so the lines would change little.  I didn’t need to take any risks so I ran a little more of the off-camber section.  Crossing the line the second time had extended my lead a little further.  One more lap!
 
 Even though I was in a comfortable position there is always the risk of getting distracted.  I set about focusing on the wheels ahead.  I crossed the line happy and exhausted…but mostly happy.
