Change national championship main image.

--- a/content/english/blog/20240113.md
+++ b/content/english/blog/20240113.md
@@ -1,7 +1,7 @@
 ---
 date: "2024-01-13"
 title: "CX National Championships"
-image: "images/blog/IMG_1137.jpeg"
+image: "images/blog/20240113-0.jpeg"
 categories: ["Race Report"]
 draft: false
 ---
