Update categories for all articles

--- a/content/english/blog/20230218.md
+++ b/content/english/blog/20230218.md
@@ -2,7 +2,7 @@
 date: "2023-02-18"
 title: "The Bog Trials - Round 3"
 image: "images/blog/IMG_0651.jpeg"
-categories: ["Race Report"]
+categories: ["Race Report", "Gravel Race"]
 draft: false
 ---
 
