--- a/content/english/blog/20230225.md
+++ b/content/english/blog/20230225.md
@@ -2,7 +2,7 @@
 date: "2023-02-25"
 title: "The Bog Trials - Round 4"
 image: "images/blog/IMG_3895.jpeg"
-categories: ["Race Report"]
+categories: ["Race Report", "Gravel Race"]
 draft: false
 ---
 
