--- a/content/english/blog/20230430-2.md
+++ b/content/english/blog/20230430-2.md
@@ -2,7 +2,7 @@
 date: "2023-04-30"
 title: "Kanturk Youth 2 Day"
 image: "images/blog/IMG_4513.jpeg"
-categories: ["Race Report"]
+categories: ["Race Report", "Road Race", "Time Trial"]
 draft: false
 ---
 
