--- a/content/english/blog/20231125.md
+++ b/content/english/blog/20231125.md
@@ -2,7 +2,7 @@
 date: "2023-11-25"
 title: "World Cup Dublin Support Race"
 image: "images/blog/20231125-0.jpeg"
-categories: ["Race Report"]
+categories: ["Race Report", "Cyclocross Race"]
 draft: false
 ---
 
