--- a/content/english/blog/20230514.md
+++ b/content/english/blog/20230514.md
@@ -2,7 +2,7 @@
 date: "2023-05-14"
 title: "Cuchulainn TT & Road Race"
 image: "images/blog/IMG_4654.jpeg"
-categories: ["Race Report", "Road Race", "Time Trial"]
+categories: ["Race", "Road", "Time Trial"]
 draft: false
 ---
 
