--- a/content/english/blog/20240113.md
+++ b/content/english/blog/20240113.md
@@ -2,7 +2,7 @@
 date: "2024-01-13"
 title: "CX National Championships"
 image: "images/blog/20240113-0.jpeg"
-categories: ["Race Report", "Cyclocross Race"]
+categories: ["Race", "Cyclocross"]
 draft: false
 ---
 *Image Credit: [SportsPhoto Ireland](https://www.facebook.com/p/Sportsphoto-Ireland-100070747975000/)*
