--- a/content/english/blog/20240115.md
+++ b/content/english/blog/20240115.md
@@ -2,7 +2,7 @@
 date: "2024-01-15"
 title: "CX Season Reflection"
 image: "images/blog/IMG_1129.jpeg"
-categories: ["Race Report"]
+categories: ["Race"]
 draft: false
 ---
 
